--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
   
 <nav class="bg-white border-gray-200 dark:bg-gray-900">
   <div class="flex flex-wrap justify-between items-center mx-auto max-w-screen-xl px-4 md:px-6 py-2.5">
-      <a href="https://flowbite.com" class="flex items-center">
+      <a href="#" class="flex items-center">
           <img src="../descărcare.jpg" class="h-6 mr-3 sm:h-9" alt="Flowbite Logo" />
           <span class="self-center text-xl font-semibold whitespace-nowrap dark:text-white">Bacalaureat</span>
       </a>
